test-k8s-app/base/node-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
      annotations:
        argocd-image-updater.argoproj.io/image-list: "shebogimmy/node-app:semver:~v1"
        argocd-image-updater.argoproj.io/write-back-method: git
        argocd-image-updater.argoproj.io/git-branch: main
        argocd-image-updater.argoproj.io/update-strategy: semver

    spec:
      containers:
        - name: node-app
          image: shebogimmy/node-app:v1.0.1
          ports:
            - containerPort: 3000
