test-k8s-app/base/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gp-mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - port: 3306
